--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -1,8 +1,18 @@
-<%- include('../mainpage/mainpage.ejs',{user_email:user_email}) %>
-<form id="msform" name="user" method="POST" action="api/account">
-    <!-- progressbar -->
+<%- include('../mainpage/mainpage.ejs',{role:user_role}) %>
 
+<form id="msform" name="user" method="POST" action="api/account/update">
+    <!-- progressbar -->
     <!-- fieldsets -->
+    <% if(message.success){%>
+      <div class="row justify-content-center">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+           <%- message.success%>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </div>
+    <%}%>
     <fieldset>
         <h2 class="fs-title">Personal Details</h2>
         <h3 class="fs-subtitle"></h3>
@@ -10,7 +20,8 @@
         <input type="text" name="last_name"  value="<%= typeof user_data != 'undefined' ? user_data['last_name'] : '' %>" placeholder="Last Name" />
         <input type="text" name="middle_name" value="<%= typeof user_data != 'undefined' ? user_data['middle_name'] : '' %>" placeholder="Middle Name" />
         <input type="text" name="phone" value="<%= typeof user_data != 'undefined' ? user_data['phone'] : '' %>" placeholder="Phone" />
-        <input type="text" name="deposit" value="<%= typeof user_data != 'undefined' ? user_data['account_balance'] : '' %>" placeholder="Account Balance" />
+        <input hidden type="text" name="email" value="<%= typeof user_data != 'undefined' ? user_data['email'] : '' %>" placeholder="Email" />
+        <%if(user_role=='user'){%><input type="text" name="cash_balance" value="<%= typeof user_data != 'undefined' ? user_data['cash_balance'] : '' %>" placeholder="Account Balance" /><%}%>
     </fieldset>
 
     <fieldset>
@@ -21,9 +32,14 @@
       <input type="text" name="street_name" value="<%= typeof user_data != 'undefined' ? user_data['street_name'] : '' %>" placeholder="Street Name" />
       <input type="text" name="zip_code" value="<%= typeof user_data != 'undefined' ? user_data['zip_code'] : '' %>" placeholder="zip Code" />
       <input type="text" name="house_number" value="<%= typeof user_data != 'undefined' ? user_data['house_number'] : '' %>" placeholder="House Number" />
+      <input type="text" hidden name="password" placeholder="password"/>
     </fieldset>
+
     <fieldset style="margin-left: 30%;">
-        <input type="submit"  class="submit action-button" target="_top">Update</input>
-    </fieldset>
-    
+        <input type="submit" value="Update"  class="submit action-button" target="_top"/>
+    </fieldset>   
   </form>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
