--- a/views/mainpage/mainpage.ejs
+++ b/views/mainpage/mainpage.ejs
@@ -15,10 +15,10 @@
         <nav>
             <a href="/profile"><i class="far fa-user"></i></a>
             <a href="/mercedes"><i class="fas fa-car"></i></a>
-            <a href="/purchase"><i class="fas fa-wallet"></i></a>
             <% if(user_role=='general'){ %><a href="/branch"><i class="fas fa-code-branch"></i></a><% } %>
             <% if(user_role=='manager'){ %><a href="/managebranch"><i class="fas fa-house-user"></i></a><% } %>
             <% if(user_role=='general'){ %><a href="/addmanager"><i class="fas fa-user-plus"></i></a><% } %>
+            <% if(user_role=='general'){ %><a href="/graph"><i class="fas fa-wallet"></i></a><% } %>
           </nav>   
     </body> 
     
