--- a/views/branch/managebranch.ejs
+++ b/views/branch/managebranch.ejs
@@ -1,4 +1,5 @@
 <%- include('../mainpage/mainpage.ejs'),{role:user_role} %>
+<% if(new_branch !="yes"){ %>
 <div class="row" style="margin-left: 100px;">
     <div class="col-md-11 col-lg-11">
         <div class="main">
@@ -100,9 +101,15 @@
           </button>
     </div>
     
+</div> <%}else{%>
+<div class="row justify-content-center">
+  <div class="col-md-1 col-lg-1">
+    <button type="button" class="btn btn-dark" style="margin-top: 20px;" data-toggle="modal" data-target="#exampleModal">
+        <i class="fa fa-plus"></i>
+      </button>
 </div>
-
-
+</div>
+<%}%>
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
