--- a/views/purchase/purchase.ejs
+++ b/views/purchase/purchase.ejs
@@ -13,10 +13,20 @@
                       </div>
                     </div>
                   <%}%>
+                  <% if(message.lowbalance){%>
+                    <div class="row justify-content-center">
+                      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                         <%- message.lowbalance %>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                    </div>
+                  <%}%>
                 <div class="card-body">
                     <div class="row ">                   
                         <p class="col-6 "><span class="text-dark">Vin Number</span></p>
-                        <p class="col-6 "><span class="badge badge-success text-white"><%- mercedes[key][0]['vin_number'] %></span></p>                  
+                        <p class="col-6 "><span class="badge badge-success text-white"><%- vin %></span></p>                  
                     </div> 
                     <hr>
                     <div class="row">
@@ -65,7 +75,7 @@
                 </div>
                 <hr>
                 <div class="row justify-content-center">
-                    <a href="/api/mercedes/purchase?vin=<%- mercedes[key][0]['vin_number'] %>&price=<%- mercedes[key][0]['price'] %>" class="btn btn-dark text-white">Confirm Purchase</a>
+                    <a href="/api/mercedes/purchase?vin=<%- vin %>&price=<%- mercedes[key][0]['price'] %>" class="btn btn-dark text-white">Confirm Purchase</a>
                 </div>
 
                 </div>
